Apply anchor contrast fix to all instances

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -69,7 +69,7 @@ div.tag-container {
     border-radius: 8px;
 }
 
-.read-more-link {
+.link {
     color: #0091ff;
     text-decoration: none;
 }
